# django-pixelflow-theme

./: .pre-commit-config.yaml  MANIFEST.in  pyproject.toml
pixelflow_theme/: __init__.py  apps.py  metadata.py
pixelflow_theme/static/admin/: style.css
pixelflow_theme/static/admin/css/default-assets/: ascolorpicker.css  barfilar.css  bars-1to10.css  bars-horizontal.css  bars-movie.css  bars-pill.css  bars-reversed.css  bars-square.css  bootstrap-stars.css  bootstrap-tagsinput.css  buttons.bootstrap4.css  chartist.css  classy-nav.css  clipboard.css  css-stars.css  daterange-picker.css  dropify.min.css  fileupload.css  fontawesome-stars-o.css  form-picker.css  ion.rangeSlider.skinmodren.css  jquery.jConveyorTicker.min.css  light-gallery.css  mini-event-calendar.min.css  modal.css  morris.css  nestable-list.css  notification.css  summernote.css  sweetalert-2.css  sweetalert.css  themify-icons.css  weather-icons.min.css
pixelflow_theme/static/admin/css/default-assets/morris-2-css/: morris.css
pixelflow_theme/static/admin/css/default-assets/new/: chartist-custom.css  chartist.min.css  simplemde.min.css  sweetalert-2.min.css  toastr.min.css
pixelflow_theme/static/admin/js/: bundle.js  template.js
pixelflow_theme/static/admin/js/default-assets/: active.js
pixelflow_theme/templates/admin/: app_list.html  base.html  base_site.html  change_list.html  change_list_results.html  login.html  nav_sidebar.html
pixelflow_theme/templates/admin/includes/: footer.html  footerjs.html  nav.html
